--- a/resources/config.json
+++ b/resources/config.json
@@ -10,6 +10,6 @@
   "MenuMusic": "RPG-Theme_v001_Looping.ogg",
   "MenuBackground": "background.png",
   "IntroImages": [],
-  "UpdateUrl": "https://kamusvalenzuela.github.io/InmortalUpdates/",
+  "UpdateUrl": "https://kamusvalenzuela.github.io/Inmortal-Update/",
   "MouseCursor": ""
 }
